--- a/appconfig.json
+++ b/appconfig.json
@@ -13,7 +13,7 @@
     ],
     "useShellSDK": false,
     "outletPositions": [
-        "SHELL_HOME_SCREEN"
+        "SHELL_HOME_SCREEN", "WFM_ACTIVITY_SIDEBAR", "SERVICE_CALL_VIEW_PAGE_EQUIPMENT_TAB_TOP"
     ],
     "insideShell": true,
     "parameters": [{
