--- a/appconfig.json
+++ b/appconfig.json
@@ -53,7 +53,7 @@
       "placeholderTranslations": [
         {
           "lang": "en",
-          "value": "API key received in the confirmation mail"
+          "value": "An API key received in the confirmation mail"
         },
         {
           "lang": "de",
