--- a/appconfig.json
+++ b/appconfig.json
@@ -2,7 +2,7 @@
     "name": "Andrii's Extension",
     "provider": "Andrusha",
     "description": "Sample extension inside Shell with Shell navigation",   
-    "version": "", 
+    "version": "1.0.0", 
     "icon": "https://www.andrusha-fond.ru/local/templates/andryusha/assets/images/heart-assets/01-h.png",
     "translations": [
       {
@@ -12,7 +12,7 @@
       }
     ],
     "useShellSDK": false,
-    "optimalHeight": "480",
+    "optimalHeight": null,
     "outletPositions": [
         
     ],
