--- a/appconfig.json
+++ b/appconfig.json
@@ -14,7 +14,7 @@
     "useShellSDK": false,
     "optimalHeight": "480",
     "outletPositions": [
-        
+        "PP_ASSIGNMENT_DETAILS_1", "PP_ASSIGNMENT_DETAILS_2", "WFM_ACTIVITY_SIDEBAR"
     ],
     "insideShell": true,
     "parameters": [{
