--- a/appconfig.json
+++ b/appconfig.json
@@ -16,6 +16,7 @@
     "outletPositions": [
         "PP_ASSIGNMENT_DETAILS_1", "PP_ASSIGNMENT_DETAILS_2", "WFM_ACTIVITY_SIDEBAR"
     ],
+    "extensionPolicies": ["one"],
     "insideShell": true,
     "parameters": [{
       "name": "alowContact",
