--- a/appconfig.json
+++ b/appconfig.json
@@ -8,7 +8,7 @@
       {
         "lang": "ua",
         "name": "І все буде добре!",
-        "description": "Це просто пробне розшірення для SAP "
+        "description": "Це просто пробне розширення для SAP"
       }
     ],
     "useShellSDK": false,
