--- a/appconfig.json
+++ b/appconfig.json
@@ -16,7 +16,7 @@
     "outletPositions": [
         "PP_ASSIGNMENT_DETAILS_1", "PP_ASSIGNMENT_DETAILS_2", "WFM_ACTIVITY_SIDEBAR"
     ],
-    "extensionPolicies": [],
+    "extensionPolicies": ["w-r-o-n-g"],
     "insideShell": true,
     "paramete": [{
       "name": "alowContact",
