--- a/appconfig.json
+++ b/appconfig.json
@@ -14,9 +14,9 @@
     "useShellSDK": false,
     "optimalHeight": "480",
     "outletPositions": [
-        "RANDOM", "PP_ASSIGNMENT_DETAILS_1", "PP_ASSIGNMENT_DETAILS_2", "WFM_ACTIVITY_SIDEBAR"
+        "PP_ASSIGNMENT_DETAILS_1", "PP_ASSIGNMENT_DETAILS_2", "WFM_ACTIVITY_SIDEBAR"
     ],
-    "extensionPolicies": ["allow-forms", "allow-modals", "allow-downloads”],
+    "extensionPolicies": ["ran-dom", "allow-forms", "allow-modals", "allow-downloads”],
     "insideShell": true,
     "parameters": [],
     "paramete": [{
