--- a/appconfig.json
+++ b/appconfig.json
@@ -16,7 +16,7 @@
     "outletPositions": [
         "PP_ASSIGNMENT_DETAILS_1", "PP_ASSIGNMENT_DETAILS_2", "WFM_ACTIVITY_SIDEBAR", "UNEXPECTED"
     ],
-    "extensionPolicies": ["allow-forms", "allow-modals", "allow-downloads"],
+    "extensionPolicies": ["allow-forms", "non-valid-ext-policy", "allow-modals", "allow-downloads"],
     "insideShell": true,
     "parameters": [],
     "paramete": [{
