--- a/appconfig.json
+++ b/appconfig.json
@@ -20,6 +20,19 @@
     "insideShell": true,
     "parameter": [],
     "parameters": [{
+      "name": "alowContact",
+      "type": "BOOLEAN",
+      "labelTranslations": [
+        {
+          "lang": "en",
+          "value": "Allow contact"
+        },
+        {
+          "lang": "de",
+          "value": "Kontakt zulassen"
+        }
+      ]
+    }, {
       "name": "apiKey",
       "required": true,
       "type": "TEXT",
@@ -44,8 +57,7 @@
           "value": "API-Schlüssel, den Sie in der Bestätigungsmail erhalten haben"
         }
       ]
-    },
-    {
+    }, {
       "name": "networkName",
       "required": true,
       "type": "TEXT",
