--- a/appconfig.json
+++ b/appconfig.json
@@ -83,23 +83,6 @@
         }
       ]
     }],
-    "shellNavigation": {
-        "icon": "activities",
-        "sideNavigation": [
-          {
-            "pathSegment": "home",
-            "labelTranslations": [
-              {
-                "lang": "en",
-                "value": "Home"
-              }
-            ],
-            "viewUrl": "/#/",
-            "icon": "home",
-            "isDefault": true,
-            "children": []
-          }
-       ]
-    }
+    "shellNavigation": null
 
 }
