--- a/appconfig.json
+++ b/appconfig.json
@@ -1,9 +1,9 @@
 {
-    "name": "Andrii's Extension"
+    "name": "Andrii's Extension",
     "provider": "Andrusha",
     "description": "Sample extension inside Shell with Shell navigation",   
     "version": "1.0.8", 
-    "icon": "http://alternative.me/media/256/angular-icon-lrnlz9b30ayf5zyf-c.png",
+    "icon": "https://alternative.me/media/256/angular-icon-lrnlz9b30ayf5zyf-c.png",
     "translations": [
       {
         "lang": "ua",
@@ -83,6 +83,7 @@
         }
       ]
     }],
-    "shellNavigation": null
+    "shellNavigation": {
+    }
 
 }
