--- a/appconfig.json
+++ b/appconfig.json
@@ -16,7 +16,7 @@
     "outletPositions": [
         "PP_ASSIGNMENT_DETAILS_1", "PP_ASSIGNMENT_DETAILS_2", "WFM_ACTIVITY_SIDEBAR"
     ],
-    "extensionPolicies": ["allow-forms", "allow-modals", "allow-downloads"],
+    "extensionPolicies": ["allow-forms", "allow-modals", "allow-downloads", "allow-email-messaging"],
     "insideShell": true,
     "parameter": [],
     "parameters": [{
