--- a/appconfig.json
+++ b/appconfig.json
@@ -1,7 +1,7 @@
 {
     "name": "Andrii's Extension",
     "provider": "Andrusha",
-    "description": "Sample extension inside Shell with Shell navigation",   
+    "description": "Simple extension inside Shell with Shell navigation",   
     "version": "1.0.15", 
     "icon": "https://alternative.me/media/256/angular-icon-lrnlz9b30ayf5zyf-c.png",
     "translations": [
