--- a/appconfig.json
+++ b/appconfig.json
@@ -14,7 +14,7 @@
     "useShellSDK": false,
     "optimalHeight": "480",
     "outletPositions": [
-       "WFM_ACTIVITY_SIDEBAR"
+       "WFM_ACTIVITY_SIDEBAR", "SERVICE_CALL_ACTIVITY_OUTLET_TAB"
     ],
     "extensionPolicies": [],
     "insideShell": true,
